# cam-calib-scratch

./: CMakeLists.txt  README.md
include/: calibration.h  extrinsics.h  homography.h  instrinsics.h  refine.h
include/calib/: compute_init_param.h  refine.h
src/: calibration.cpp  calibration_main.cpp  extrinsics.cpp  homography.cpp  intrinsics.cpp  main.cpp  utils.cpp
src/calib/: compute_init_param.cpp  refine.cpp
src/reference_opt_egs/: eg_mrpt_opt2.cpp  eigen_lm1.cpp  eigen_lm2.cpp  eigen_lm3.cpp
